adicionando imagem de fundo

--- a/fundo001.html
+++ b/fundo001.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>imagem de fundo</title>
     <style>
+        body {
+            background-image: url('exercícios 22/imagens/default-3045043_640.jpg');
+        }
+
         div.quadrado {
             border: 3px solid red;
             border-radius: 10px;
@@ -24,7 +28,7 @@
         }
 
         div#q3 {
-            background-image: url('exercios 22/imagens/imgolho');
+            background-image: url('exercícios 22/imagens/papel-de-parede-do-celular-foco-suave-em-flor-delicada-meio-prado-laranja-desfocado-no-pôr-sol-354016436.jpg');
         }
     </style>
 </head>
