atualizei a posição e largura  ex:006

--- a/exercícios 22/fundo 006.html
+++ b/exercícios 22/fundo 006.html
@@ -7,6 +7,7 @@
     <style>
         body {
             height: 100vh;
+            display: flex;
             background-color: black;
             background-image: url('/exercícios 22/imagens/desktop-wallpapers-wallpaper-desktop-tree-free-photo.jpg');
             background-size: cover;
@@ -17,9 +18,10 @@
 
         main {
             background-color: white;
-            width: 400px;
+            width: 500px;
             padding: 20px;
             margin: auto;
+            text-align: center;
             border: solid 2px red;
             border-radius: 10px;
         }
@@ -40,6 +42,16 @@
             Doloremque, iure eos itaque, id nam aliquid quas autem nobis totam quaerat at beatae, placeat commodi
             perspiciatis ut odio nostrum tempora modi corrupti nesciunt error natus reiciendis consequuntur est?
             Laudantium?
+        </p>
+        <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi labore voluptatum cumque corporis expedita
+            numquam, mollitia odit voluptas sit provident totam quo! Corrupti fugit suscipit quas iure delectus nostrum
+            dignissimos.
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consectetur animi rem tempora nostrum ut cum esse
+            doloribus neque! Incidunt id, repudiandae illo quasi deleniti cupiditate nesciunt explicabo aliquam libero
+            magni!
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam error dicta cum eaque quasi quo ipsum odit
+            earum temporibus sit, sed eum eligendi itaque quidem unde accusamus esse, atque tempora.
         </p>
     </main>
 </body>
