encurtamento de código Shorthand - background

--- a/exercícios 22/fundo 006.html
+++ b/exercícios 22/fundo 006.html
@@ -7,18 +7,24 @@
     <style>
         body {
             height: 100vh;
-            display: flex;
+            /*
             background-color: black;
             background-image: url('/exercícios 22/imagens/desktop-wallpapers-wallpaper-desktop-tree-free-photo.jpg');
             background-size: cover;
-            background-repeat: no-repeat;
+            background-attachment: fixed;
             background-position: center center;
+            */
 
+            /* Shorthand - backgroud > color > image > position> [size]- esiste essa regra mas ainda não foi aplicado poriço é separado attachament*/
+
+            background: black url('/exercícios 22/imagens/desktop-wallpapers-wallpaper-desktop-tree-free-photo.jpg') center center no-repeat fixed;
+            background-size: cover;
+            /* Um encurtamento de código */
         }
 
         main {
             background-color: white;
-            width: 500px;
+            max-width: 400px;
             padding: 20px;
             margin: auto;
             text-align: center;
@@ -52,6 +58,39 @@
             magni!
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam error dicta cum eaque quasi quo ipsum odit
             earum temporibus sit, sed eum eligendi itaque quidem unde accusamus esse, atque tempora.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur in, veritatis harum excepturi impedit
+            doloremque aliquid enim recusandae quaerat necessitatibus dicta at a! Tempore eligendi eaque velit explicabo
+            dignissimos nulla.
+            Quo quod nulla quisquam sed eum velit deleniti ratione amet inventore reprehenderit impedit magnam delectus
+            culpa, fugiat laborum quia nobis, a provident! Ad quam exercitationem iusto. Error expedita eaque saepe?
+            Saepe eaque esse suscipit minima atque, facilis, earum eveniet repellat illo dolor reiciendis aperiam
+            commodi culpa obcaecati error non? Nesciunt perspiciatis adipisci magni qui beatae repudiandae quibusdam
+            deserunt eius debitis!
+            Eius similique maiores eos soluta voluptate. Explicabo cupiditate ut, excepturi magni consequatur
+            consectetur rem eveniet ratione corrupti facilis, culpa repudiandae temporibus. Eius illo ut numquam eos.
+            Sequi velit quibusdam ipsam.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla, perferendis. Autem fugiat ut pariatur quasi
+            dicta unde officiis explicabo expedita repellendus aperiam nostrum velit tenetur eligendi, tempore at error
+            modi?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta corrupti fugit, necessitatibus distinctio a
+            quasi non vel sequi neque. Laudantium accusamus sint, repellendus architecto suscipit mollitia fugit quos
+            quod asperiores.
+            Suscipit eveniet ipsam veniam aliquid assumenda tenetur mollitia ratione. Veniam, laborum adipisci facere
+            voluptas molestias sit aut obcaecati possimus mollitia nesciunt magnam omnis dolorem sapiente corporis
+            autem! Nobis, aperiam minus?
+            Doloremque tenetur est vero, cupiditate illum nulla ut expedita corrupti voluptatum ad amet praesentium
+            recusandae ex rerum saepe cumque culpa quidem dicta accusamus, voluptates quisquam tempora modi
+            necessitatibus. Molestias, assumenda?
+            Rem impedit placeat voluptatibus explicabo unde provident fugit. Distinctio, quidem voluptas suscipit
+            provident magnam molestiae doloribus culpa autem ex nam possimus, quibusdam aliquid in rerum unde. Enim,
+            sed. Sunt, earum.
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor dolorum numquam illo mollitia natus deserunt
+            ipsa ea sunt ullam dolores, id officiis! Dolorum debitis laudantium illum incidunt, quae magni sint.
+            Velit aut assumenda inventore amet pariatur cumque in sequi ullam placeat a, aliquid fugit ipsa, error
+            officiis magni dolorum, adipisci eum et voluptatum quis suscipit ut. Atque veritatis delectus assumenda.
+            Corporis maxime, tenetur vero dolores deleniti consequatur sequi eligendi ipsa beatae recusandae esse sed
+            quasi labore accusamus excepturi? Deleniti et magni consequatur eligendi quasi. Eius sapiente tempora ipsam
+            debitis suscipit!
         </p>
     </main>
 </body>
