--- a/desafio012/index.html
+++ b/desafio012/index.html
@@ -28,7 +28,7 @@
         </p>
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="img01">
         <p>
             Não é mais como era antes<br>
             É tudo abreviado<br>
@@ -62,7 +62,7 @@
         </p>
     </section>
 
-    <section class="imagem">
+    <section class="imagem" id="img02">
         <p>
             Tenho saudade das cartas<br>
             Escritas com a própria mão<br>
@@ -99,6 +99,9 @@
         <p>Sithe criado por <a href="https://github.com/Caiquestack/" target="_blank"> Caique Fernandes</a>, para meus
             estudos com o <a href="https://www.cursoemvideo.com/" target="_blank"> Curso em video </a>.
         </p>
+        <a href="https://www.cursoemvideo.com/" target="_blank">
+            <img src="../desafio012/imagens/images.png" alt="Imagem da logotipo do curso em vídeo." id="logo">
+        </a>
     </footer>
 </body>
 
