--- a/exercícios 23/tabela.html
+++ b/exercícios 23/tabela.html
@@ -13,7 +13,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
-            border: 3px solid rgb(255, 141, 141)
+            border: 3px solid rgb(243, 91, 91);
         }
 
         tr.linha {
@@ -23,6 +23,17 @@
         td {
             border: 1px solid black;
             padding: 10px;
+        }
+
+        .tabela2 {
+            width: 500px;
+            height: 500px;
+            margin-top: 40px;
+        }
+
+        .linha2>td {
+            text-align: center;
+            vertical-align: top;
         }
     </style>
 </head>
@@ -37,7 +48,7 @@
                     table Data = dado de tabela 
     -->
     <table>
-        <tr class="linha "><!-- Primeira linha -->
+        <tr class="linha"><!-- Primeira linha -->
             <td>A1</td>
             <td>B1</td>
             <td>C1</td>
@@ -53,6 +64,29 @@
             <td>C3</td>
         </tr>
         <tr><!-- Quarta linha -->
+            <td>A4</td>
+            <td>B4</td>
+            <td>C4</td>
+        </tr>
+    </table>
+
+    <table class="tabela2">
+        <tr class="linha2 "><!-- Primeira linha -->
+            <td>A1</td>
+            <td>B1</td>
+            <td>C1</td>
+        </tr>
+        <tr class="linha2 "><!-- Segunda linha -->
+            <td>A2</td>
+            <td>B2</td>
+            <td>C2</td>
+        </tr>
+        <tr class="linha2 "><!-- Terceira linha -->
+            <td>A3</td>
+            <td>B3</td>
+            <td>C3</td>
+        </tr>
+        <tr class="linha2 "><!-- Quarta linha -->
             <td>A4</td>
             <td>B4</td>
             <td>C4</td>
