--- a/exercícios 23/tabela.html
+++ b/exercícios 23/tabela.html
@@ -32,8 +32,8 @@
         }
 
         .linha2>td {
-            text-align: center;
-            vertical-align: top;
+            text-align: center;/*left> esquerda; center> centro; right. direita*/
+            vertical-align: top;/*top> emcima;middle> meio;bottom> baixo*/
         }
     </style>
 </head>
