--- a/exercícios 23/tabela04.htm
+++ b/exercícios 23/tabela04.htm
@@ -40,14 +40,14 @@
         <caption> Filmes favoritos</caption>
         <thead>
             <tr>
-                <th>Grupos</th>
-                <th>Nomes</th>
-                <th colspan="3">Filmes</th>
+                <th scope="col">Grupos</th>
+                <th scope="col">Nomes</th>
+                <th colspan="3" scope="colgroup">Filmes</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <th rowspan="3">Mulheres</th>
+                <th rowspan="3" scope="rowgroup">Mulheres</th>
                 <td>Ana maria santos</td>
                 <td>Alien</td>
                 <td>Rambo</td>
@@ -66,7 +66,7 @@
                 <td>Big Heero</td>
             </tr>
             <tr>
-                <th rowspan="3">Homens</th>
+                <th rowspan="3" scope="rowgroup">Homens</th>
                 <td>Bruno mendonça</td>
                 <td>Intôcaveis</td>
                 <td>Aminésia</td>
