--- a/exercícios 23/desafio03.html
+++ b/exercícios 23/desafio03.html
@@ -22,13 +22,21 @@
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
             color: white;
         }
+
+        col.nota {
+            background-color: cyan;
+        }
     </style>
     <title>Desafio 3</title>
 </head>
 
 <body>
-
     <table>
+        <colgroup>
+            <col class="">
+            <col class="">
+            <col class="nota" span="2">
+        </colgroup>
         <thead>
             <tr id="título">
                 <td rowspan="2" scope="col">Área</td>
