--- a/exrcícios 24/ifreme.html
+++ b/exrcícios 24/ifreme.html
@@ -4,20 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        iframe {
+            width: 500px;
+            height: 500px;
+            border: solid rgb(255, 0, 0) 2px;
+        }
+    </style>
     <title>Criando ifreme</title>
 </head>
 
 <body>
     <h1> Testando o uso de Ifreme</h1>
-
+    <!-- Tamanho padrão 300x150-->
     <p>Acesseçando o sith do
-        <iframe src="https://www.cursoemvideo.com" frameborder="0"></iframe>
+        <iframe src="https://www.cursoemvideo.com" frameborder="0"
+            scolling="auto"><!-- O scolling  é quem define se tem barra de rolagem no mini sith, auto, yes e no. -->
+            <a href="https://www.cursoemvideo.com">Curso em vídeo</a>
+            <!--Auto=> se ajusta na tela quando é diminuido, yes=> sempre vai ter a rolagem, no=> não vai permitir a rolagem -->
+        </iframe>
         para aprender a programar.
     </p>
     <p>
-        O sith do
-        <iframe src="https://www.google.com.br" frameborder="0"></iframe>
-        também é muito legal
+        O repositório do Guanabara
+        <iframe src="https://gustavoguanabara.github.io"
+            frameborder="0"><!--frameborder é basicamente a borda, porem pode ser editado no css.-->
+            no<a href="https://gustavoguanabara.github.io" target="_blank"> Guithab </a>
+        </iframe>
+        também é muito legal!
     </p>
     <p>Como mostra a cima a pagina do iframe não sera carregada por motivos de seguranças,
         cada sith tem sua configuração de segurança em relação ao iframe
